# fractal-generator

./: .gitignore  README.md
.github/workflows/: deploy.yml
main-application/: pyproject.toml  run_observer.py
main-application/.github/workflows/: deploy.yml
main-application/app/: main.py
main-application/generator/: audio.py  fractal.py  weather.py
main-application/static/: weather_stats.json
main-application/templates/: index.html
